Killed the Elevator Thread when it hard failed