@@ -67,14 +67,26 @@ public class Scheduler implements Runnable {
      * A List of Elevators representing the elevators that are currently running
      */
     private List<Elevator> busyElevators;
-
+    /**
+     * The floor listener for the Scheduler
+     */
     private FloorListener floorListener;
     /**
      * A List of Threads representing the threads for the elevators.
      */
     private List<Thread> elevatorThreads;
-    private Elevator elevator1, elevator2, elevator3;
+    /**
+     * The thread for the floor listener
+     */
     private Thread floorListenerThread;
+    /**
+     * A List containing the failed elevators
+     */
+    private List<Elevator> failedElevators;
+    /**
+     * A List containing all elevators
+     */
+    private List<Elevator> allElevators;
 
     /**
      * Initializes a Scheduler.
@@ -88,13 +100,16 @@ public class Scheduler implements Runnable {
         int numElevators = portNumbers.size();
         availableElevators = new ArrayList<>();
         busyElevators = new ArrayList<>();
+        failedElevators = new ArrayList<>();
         elevatorThreads = new ArrayList<>();
+        allElevators = new ArrayList<>();
         for (int i = 0; i < numElevators; i++) {
             String elevatorName = "Elevator" + (i + 1);
             Elevator elevator = new Elevator(this, portNumbers.get(i), elevatorName);
             Thread elevatorThread = new Thread(elevator, elevatorName);
             availableElevators.add(elevator);
             elevatorThreads.add(elevatorThread);
+            allElevators.add(elevator);
             elevatorThread.start();
         }
 
@@ -111,6 +126,7 @@ public class Scheduler implements Runnable {
         try {
             sendSocketFloor = new DatagramSocket();
             sendReceiveSocket = new DatagramSocket();
+            sendReceiveSocket.setSoTimeout(78000);
         } catch (SocketException se){
             se.printStackTrace();
             System.exit(1);
@@ -172,9 +188,6 @@ public class Scheduler implements Runnable {
         String message = "[Scheduler] Floor event completed: " + hardwareDevice.toString();
         byte[] messageBytes = message.getBytes();
 
-        // create a DatagramPacket for the message and send it
-        // TODO: how do i get the port number for the Floor subsystem???
-//         sendPacketFloor = new DatagramPacket(messageBytes, messageBytes.length, hehe, haha);
         try {
             sendSocketFloor.send(floorListener.getSendPacketFloor());
         } catch (IOException e) {
@@ -184,7 +197,7 @@ public class Scheduler implements Runnable {
 
         System.out.println("[Scheduler] Message sent to floor containing: " + message);
         numReqsHandled++;
-        notifyAll(); // TODO: do we still need this???
+        notifyAll();
     }
 
     /**
@@ -206,17 +219,6 @@ public class Scheduler implements Runnable {
         floorEventsToHandle.remove(hardwareDevice);
         notifyAll();
     }
-
-//    public synchronized HardwareDevice[] getEventsAtFloor (int floor) {
-//        for (int j = 0; j < floorEventsToHandle.size(); j++) {
-//            if (floorEventsToHandle.get(j).getFloor() == floor) {
-//                scheduler.removeFloorEvent(floorEvent.get(i));
-//                System.out.println("picked up floor event " + floorEvent.get(i));
-//            }
-//        }
-////                notifyAll();
-//
-//    }
 
     /**
      * Constantly checks the elevator status, waiting for the elevator to complete its task. If the elevator is still
@@ -267,26 +269,6 @@ public class Scheduler implements Runnable {
     public void run() {
         while (numReqsHandled < numReqs) {
             currentState.handleRequest(this);
-        }
-    }
-
-    /**
-     * Sorting the elevators into lists depending on their running status
-     */
-    public void sortElevators() {
-//        for (Elevator elevator : busyElevators){
-//            if (elevator.getCurrentState() instanceof WaitingForElevatorRequestState){
-//                availableElevators.add(elevator);
-//                busyElevators.remove(elevator);
-//            }
-//        }
-        Iterator<Elevator> iterator = busyElevators.iterator();
-        while (iterator.hasNext()) {
-            Elevator elevator = iterator.next();
-            if (elevator.getCurrentState() instanceof WaitingForElevatorRequest) {
-                availableElevators.add(elevator);
-                iterator.remove(); // Use Iterator's remove method
-            }
         }
     }
 
@@ -369,7 +351,7 @@ public class Scheduler implements Runnable {
             e.printStackTrace();
             System.exit(1);
         }
-        addBusyElevator(elevator);
+        //addBusyElevator(elevator);
         distributeFloorEvents();
     }
 
@@ -436,15 +418,12 @@ public class Scheduler implements Runnable {
      * @return Elevator Object
      */
     private Elevator getElevator(String name) {
-        if (name.equals("Elevator1")) {
-            return elevator1;
-        } else if (name.equals("Elevator2")) {
-            return elevator2;
-        } else if (name.equals("Elevator3")) {
-            return elevator3;
-        } else {
-            return null;
+        for (Elevator e : allElevators){
+            if (e.getName().equals(name)){
+                return e;
+            }
         }
+        return null;
     }
 
     /**
@@ -452,7 +431,7 @@ public class Scheduler implements Runnable {
      * @return Elevator
      */
     public Elevator getElevatorTest() {
-        return availableElevators.get(0);
+        return availableElevators.getFirst();
     }
 
     /**
@@ -463,7 +442,27 @@ public class Scheduler implements Runnable {
         sendSocketFloor.close();
     }
 
+    /**
+     * Gets the floor listener
+     * @return The floor listener
+     */
     public FloorListener getFloorListener() {
         return floorListener;
+    }
+
+    /**
+     * Kills the specified elevator thread
+     * @param name The name of the elevator thread to be killed
+     */
+    public void killElevatorThread(String name){
+        failedElevators.add(getElevator(name));
+        availableElevators.remove(getElevator(name));
+        busyElevators.remove(getElevator(name));
+
+        for (Thread t : elevatorThreads){
+            if (t.getName().equals(name)){
+                t.interrupt();
+            }
+        }
     }
 }
